--- a/correction/index.html
+++ b/correction/index.html
@@ -22,38 +22,38 @@
         <div id="logoContainer" class="bordures borduresGreen">
           <img id="logo" src="./images/logo.png" alt="Logo de l'entreprise">
         </div>
-        <img id="baniere" class="bordures borduresGreen" src="./images/baniere.png" alt="Baniere, un paysage montagneux">
+        <img id="baniere" class="bordures borduresGreen" src="./images/banniere.jpg" alt="Baniere, un paysage montagneux">
       </header>
 
       <main>
 
-        <h1 class="bordures borduresPurple">Titre principal</h1>
+        <h1 class="bordures borduresPurple">Web Agency</h1>
 
         <section id="sP" class="bordures borduresPurple">
           <h2 id="sPTitle">Notre équipe</h2>
           <div id="sPContent" class="bordures borduresGreen">
             <article class="sPContentCard bordures borduresRed">
-              <img class="sPContentCardImg" src="./images/p01.png" alt="Photo de " class="bordures">
+              <img class="sPContentCardImg" src="./images/team/p01.jpg" alt="Photo de " class="bordures">
               <p class="bordures borduresBlue">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
             </article>
             <article class="sPContentCard bordures borduresRed">
-              <img class="sPContentCardImg" src="./images/p02.png" alt="Photo de " class="bordures">
+              <img class="sPContentCardImg" src="./images/team/p02.jpg" alt="Photo de " class="bordures">
               <p class="bordures borduresBlue">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
             </article>
             <article class="sPContentCard bordures borduresRed">
-              <img class="sPContentCardImg" src="./images/p03.png" alt="Photo de " class="bordures">
+              <img class="sPContentCardImg" src="./images/team/p03.jpg" alt="Photo de " class="bordures">
               <p class="bordures borduresBlue">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
             </article>
             <article class="sPContentCard bordures borduresRed">
-              <img class="sPContentCardImg" src="./images/p01.png" alt="Photo de " class="bordures">
+              <img class="sPContentCardImg" src="./images/team/p04.jpg" alt="Photo de " class="bordures">
               <p class="bordures borduresBlue">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
             </article>
             <article class="sPContentCard bordures borduresRed">
-              <img class="sPContentCardImg" src="./images/p02.png" alt="Photo de " class="bordures">
+              <img class="sPContentCardImg" src="./images/team/p05.jpg" alt="Photo de " class="bordures">
               <p class="bordures borduresBlue">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
             </article>
             <article class="sPContentCard bordures borduresRed">
-              <img class="sPContentCardImg" src="./images/p03.png" alt="Photo de " class="bordures">
+              <img class="sPContentCardImg" src="./images/team/p06.jpg" alt="Photo de " class="bordures">
               <p class="bordures borduresBlue">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
             </article>
           </div>
@@ -64,28 +64,28 @@
           <div class="sCContainer bordures borduresGreen">
 
             <div class="cSCompetence cSCompetenceOdd bordures borduresRed">
-              <img class="bordures borduresBlue" src="./images/competence1.jpg" alt="">
+              <img class="bordures borduresBlue" src="./images/competences/html.png" alt="">
               <div class="cSCompetenceH3 bordures borduresBlue">
-                <h3>Competence 1</h3>
+                <h3>langage html</h3>
               </div>
             </div>
             <div class="cSCompetence cSCompetencePair bordures borduresRed">
               <div class="cSCompetenceH3 bordures borduresBlue">
-                <h3>Competence 2</h3>
+                <h3>langage css</h3>
               </div>
-              <img  class="bordures borduresBlue" src="./images/competence2.jpg" alt="">
+              <img  class="bordures borduresBlue" src="./images/competences/css.png" alt="">
             </div>
             <div class="cSCompetence cSCompetenceOdd bordures borduresRed">
-              <img class="bordures borduresBlue"  class="bordures borduresBlue" src="./images/competence3.jpg" alt="">
+              <img class="bordures borduresBlue"  class="bordures borduresBlue" src="./images/competences/js.png" alt="">
               <div class="cSCompetenceH3 bordures borduresBlue">
-                <h3>Competence 3</h3>
+                <h3>langage js</h3>
               </div>
             </div>
             <div class="cSCompetence cSCompetencePair bordures borduresRed">
               <div class="cSCompetenceH3 bordures borduresBlue">
-                <h3>Competence 4</h3>
+                <h3>framework react</h3>
               </div>
-              <img class="bordures borduresBlue" src="./images/competence4.jpg" alt="">
+              <img class="bordures borduresBlue" src="./images/competences/react.png" alt="">
             </div>
 
 
